# Sentence-Completion-Questions-via-Pre-trained-Neural-Language-Models

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  code cell by cell  config.py  docker-compose.yml  generate_sample_pdf.py  main.py  pyproject.toml  requirements.txt
data/: sample_questions.json
src/data/: dataset.py  pdf_parser.py  prepare.py
src/evaluation/: metrics.py
src/utils/: helpers.py  logger.py  pdf_export.py  validation.py
tests/: test_core.py
